--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monira Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Monira</span> World</h1>
+            <h3>Front End Developer</h3>
+            <p>Hello! This is Monira your front-end developer, passionate front end developer in web app and desktop
+                application development. This is include front-end design, brand identity, graphics, illustration,etc.
+            </p>
+            <a class="Link button" target="_blank" href="https://www.linkedin.com/in/monira-alam-542a9046/">Hire me</a>
+        </div>
+        <div class="half-width"><img src="images/my-bg.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
