--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
         <div class="half-width"><img src="images/my-bg.png" alt="">
         </div>
     </section>
+    <section class="Dream-big">
+        <div>
+            <img src="images/my-bg.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web Developer</h2>
+            <p>Every website or a softwear taht we encounter has been built by a web developer. To the outside eyes, it
+                can seem like a complecated, confusing and somewhat inaccessible field. First though we will take a look
+                at the web development industry as it stands in 2022 and consider web development ia a smart career move
+                with a particular focus on the impact of the Covid-19 pandamic.</p>
+        </div>
+
+    </section>
 </body>
 
 </html>
