--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
         </div>
 
     </section>
+    <section class="Experience area">
+        <h1>Experiences</h1>
+        <div>
+            <h2>Full Stack Developer</h2>
+            <h3>2021-present | Pro Level Developer</h3>
+            <p>A full stack web developer is a person who can develop both client and server software.Full Stack
+                Developers have to have some skills in a wide variety of coding niches, from databases to graphic design
+                and UI/UX management in order to do their job well.</p>
+        </div>
+        <Div>
+            <h2>Baby Web Developer</h2>
+            <h3>2021-2022 Programming Hero Learner</h3>
+            <p>So you want to become a coder. In short, the fastest and easiest way to become a coder today is to focus
+                on web development. In fact, you can become a well-rounded web coder in just 6 months, and this article
+                outlines a month-by-month plan for how to do that.</p>
+        </Div>
+    </section>
 </body>
 
 </html>
